2010-03-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.21

	* Fixed automatic raising/lowering of indices in canonicalise, and
	added `position=independent' option for Indices to prevent this
	from happening when it is not wanted.

2010-03-19  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed display of Derivatives and PartialDerivatives (had too
	many brackets). 

2010-03-01  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed handling of stuck kernels (both on exit of xcadabra as
	well as on restart).

2010-02-06  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed a substitute bug with a?_{i j} type patterns (would mess
	up the indices).

2010-02-05  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.19

	* Fixed a bunch of undo/redo bugs and associated gtk subtleties
	which may have been the cause of the OS X segfaults.

	There are still problems on OS X due to incompatible library
	versions between Apple and MacPorts/Fink.

2010-02-04  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed display of \anticommutator.

2010-02-01  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed cadabra-41: @collect_factors does not take commutativity
	properties into account.

2010-01-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed cadabra-7.

2009-12-06  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed @expand_power action on fractional powers.

2009-12-02  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed display of commutators (duplicate second part).

2009-08-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed compilation problem on OS X.

2009-08-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.16

	* Fixed a problem with prod-sorting of two neighbouring objects
	with non-contracted implicit indices.

	* Fixed split-view operation of the GUI.

2009-08-21  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed handling of Accents in the new output routines.
